# registro_compras

./: README.md  pyproject.toml
core/settings/: base.py  local.py  production.py
